# KMC

./: .gitignore  CMakeLists.txt
KMC/: CMakeLists.txt  ExampleXlink.hpp  kmc.hpp  kmcx.hpp  lookup_table.hpp  macros.hpp
